--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
+// Application
+PORT=5000
+
 // POSTGRES
 HOST=localhost
-PORT=5432
-USER=postgres
+PG_PORT=5432
+PG_USER=postgres
 PASSWORD=123
 DATABASE=ecommerce
